--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="pruebas-gui" class="anchor" href="#pruebas-gui" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pruebas Gui.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
@@ -40,9 +40,14 @@
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="soporte-e-integrantes" class="anchor" href="#soporte-e-integrantes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Soporte e Integrantes</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Oscar Loor -
+Carlos Sampedro - 
+Angel Molina - <a href="mailto:molinao.angel@gmail.com">molinao.angel@gmail.com</a>
+Fredy -
+Juan Castillo -
+Stalin Guaman - <a href="mailto:stan.deuxie@live.com">stan.deuxie@live.com</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/AppLibresPruebaGUI/App_Libres_Prueba_GUI">App libres prueba gui</a> is maintained by <a href="https://github.com/AppLibresPruebaGUI">AppLibresPruebaGUI</a>.</span>
