--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 
 <head>
     <title>Angel Molina</title>
-
+    <style>
+        h2{
+            color: cornflowerblue;
+            text-align: center;
+        }
+         h3{
+            color: lightcoral;
+            text-align: right;
+        }
+        body{
+            color: brown;
+            
+        }
+    </style>
 </head>
 
 <body>
@@ -21,6 +34,7 @@
         <h2>Bulldog</h2>
 
     </a>
+    
     <p>Lista de materias de sexto semestre
     </p>
     <pre>
