--- a/index.html
+++ b/index.html
@@ -4,20 +4,7 @@
 
 <head>
     <title>Angel Molina</title>
-    <style>
-        h2{
-            color: cornflowerblue;
-            text-align: center;
-        }
-         h3{
-            color: lightcoral;
-            text-align: right;
-        }
-        body{
-            color: brown;
-            
-        }
-    </style>
+        <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 
 <body>
@@ -42,11 +29,11 @@
         
         de Sexto            Semestre
         </pre>
-    <h2>Titulo 2</h2>
-    <h3>Titulo 3</h3>
-    <h4>Titulo 4</h4>
-    <h5>Titulo 5</h5>
-    <h6>Titulo 6</h6>
+    <h2 class="centrar">Titulo 2</h2>
+    <h3 class="centrar">Titulo 3</h3>
+    <h4 class="centrar">Titulo 4</h4>
+    <h5 class="centrar">Titulo 5</h5>
+    <h6 class="centrar">Titulo 6</h6>
     <!--Unordered list-->
     <h2>Mis materias</h2>
     <ul>
@@ -68,7 +55,7 @@
 
     </ol>
     <h3>Tabla de Calificaciones</h3>
-    <table>
+    <table id="tabla1">
         <tr>
             <th>AAP
             </th>
