--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <li>Carlos Sampedro - <i class="fa fa-envelope"></i> <a href="mailto:carlos.e.sampedro.91@gmail.com?Subject=PruebasGUI" target="_top">carlos.e.sampedro.91@gmail.com</a></li>
     <li>Angel Molina - <i class="fa fa-envelope"></i> <a href="mailto:molinao.angel@gmail.com?Subject=PruebasGUI" target="_top">molinao.angel@gmail.com</a></li>
     <li>Stalin Guaman - <i class="fa fa-envelope"></i> <a href="mailto:stan.deuxie@live.com?Subject=PruebasGUI" target="_top">stan.deuxie@live.com</a></li>
-    <li>Fredy Bazante - <i class="fa fa-envelope"></i> <a href="mailto:freddy.bazante@epn.edu.ec?Subject=PruebasGUI" target="_top">stan.deuxie@live.com</a></li>
+    <li>Fredy Bazante - <i class="fa fa-envelope"></i> <a href="mailto:freddy.bazante@epn.edu.ec?Subject=PruebasGUI" target="_top">freddy.bazante@epn.edu.ec</a></li>
     <li>Juan Castillo</li>
    </ul>
   </div>
