--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p>Es un módulo del proyecto: <a target="_blank" href="https://github.com/AppLibres2015b/App_Libres_2015_b"><i class="fa fa-code-fork"></i> Link</a>, el cual esta orientado a tomar pruebas virtuales a través de una interfaz gráfica.</br>
    </br>
 
-   Utilizaremos tecnologías como HTML, CSS y Javascript El cual generara una interfaz dinámica a partir de datos de entrada, en este caso utilizaremos lectura de una base de datos</p>
+   Utilizaremos tecnologías como HTML, CSS y Javascript Las cuales generaran una interfaz dinámica a partir de datos de entrada, en este caso utilizaremos las lecturas de una base de datos</p>
 
   <h2><i class="fa fa-check"></i> Objetivo Principal</h2>
   <p>Leeremos datos de una base de datos previamente construida, lo interpretaremos y generaremos una interfaz gráfica, de ser necesario agregaremos nuevos campos y para finalizar agregaremos esta información a la base de datos</p>
@@ -36,7 +36,7 @@
   <p>
    <ol>
     <li>Leeremos los datos de una base de datos generada por el modulo del grupo anterior.</li>
-    <li>Interpretaremos este archivo y generaremos una interfaz gráfica</li>
+    <li>Interpretaremos este archivo y generaremos una interfaz gráfica.</li>
     <li>Agregaremos nuevos campos los cuales permitiran al estudiante ingresar sus datos personales y otro tipo de información</li>
     <li>Agregaremos información a la base de datos para que el grupo correspondiente al siguiente modulo lo pueda utilizar</li>
    </ol>
@@ -48,7 +48,7 @@
  <section class="estadoActual">
   <div style="width:50%">
    <h3><i class="fa fa-play-circle-o"></i> Estado del proyecto:</h3>
-  <p>En Desarrollo</p>
+  <p>En desarrollo</p>
   </div>
   <div style="width:50%">
    <h3><i class="fa fa-calendar-o"></i> Fechas en los que estará activo el proyecto:</h3>
@@ -65,16 +65,16 @@
 
    <h2>Colaboradores</h2>
    <ul>
-    <li>Oscar Loor - <i class="fa fa-envelope"></i> <a href="mailto:dwquito@hotmail.com?Subject=PruebasGUI" target="_top">dwquito@hotmail.com</a></li>
-    <li>Carlos Sampedro - <i class="fa fa-envelope"></i> <a href="mailto:carlos.e.sampedro.91@gmail.com?Subject=PruebasGUI" target="_top">carlos.e.sampedro.91@gmail.com</a></li>
-    <li>Angel Molina - <i class="fa fa-envelope"></i> <a href="mailto:molinao.angel@gmail.com?Subject=PruebasGUI" target="_top">molinao.angel@gmail.com</a></li>
-    <li>Stalin Guaman - <i class="fa fa-envelope"></i> <a href="mailto:stan.deuxie@live.com?Subject=PruebasGUI" target="_top">stan.deuxie@live.com</a></li>
     <li>Fredy Bazante - <i class="fa fa-envelope"></i> <a href="mailto:freddy.bazante@epn.edu.ec?Subject=PruebasGUI" target="_top">freddy.bazante@epn.edu.ec</a></li>
-    <li>Juan Castillo</li>
+    <li>Juan Castillo <i class="fa fa-envelope"></i> <a href="mailto:?Subject=PruebasGUI" target="_top"></a></li>
+    <li>Stalin Guamán - <i class="fa fa-envelope"></i> <a href="mailto:stan.deuxie@live.com?Subject=PruebasGUI" target="_top">stan.deuxie@live.com</a></li>
+    <li>Oscar Loor - <i class="fa fa-envelope"></i> <a href="mailto:dwquito@hotmail.com?Subject=PruebasGUI" target="_top">dwquito@hotmail.com</a></li>
+    <li>Angel Molina - <i class="fa fa-envelope"></i> <a href="mailto:molinao.angel@gmail.com?Subject=PruebasGUI" target="_top">molinao.angel@gmail.com</a></li>
+    <li>Carlos Sampedro - <i class="fa fa-envelope"></i> <a href="mailto:carlos.e.sampedro.91@gmail.com?Subject=PruebasGUI" target="_top">carlos.e.sampedro.91@gmail.com</a></li>
    </ul>
   </div>
   <div style="width:50%;">
-   <h2 style="text-align: center;">¿Deseas ser parte de este proyecto?</h2>
+   <h2 style="text-align: center;">Apoyanos! ¿Deseas ser parte de este proyecto?</h2>
    <p style="text-align: center;"><i class="fa fa-smile-o"></i> Suscríbete</br> Necesitamos tu ayuda para continuar con el desarrollo de este proyecto, aun cuando el semestre académico haya finalizado</p>
 
 
@@ -124,7 +124,7 @@
 
       <div class="indicates-required"><span class="asterisk">*</span> Campo Requerido</div>
       <div class="mc-field-group">
-       <label for="mce-EMAIL">Dirección de correo <span class="asterisk">*</span>
+       <label for="mce-EMAIL">Dirección de correo electrónico<span class="asterisk">*</span>
        </label>
        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
       </div>
