--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
  <meta charset="UTF-8">
- <title>Pruebas Gui by AppLibresPruebaGUI</title>
+ <title>Pruebas GUI by AppLibresPruebaGUI</title>
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -56,8 +56,6 @@
    <p><strong>Hasta:</strong> 12-02-2016 (Podría Variar)</p>
   </div>
  </section>
-
-
 
  <section class="colaboradores">
   <div style="width:50%;">
