--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    <h2>Colaboradores</h2>
    <ul>
     <li>Fredy Bazante - <i class="fa fa-envelope"></i> <a href="mailto:freddy.bazante@epn.edu.ec?Subject=PruebasGUI" target="_top">freddy.bazante@epn.edu.ec</a></li>
-    <li>Juan Castillo <i class="fa fa-envelope"></i> <a href="mailto:?Subject=PruebasGUI" target="_top"></a></li>
+    <li>Juan Castillo <i class="fa fa-envelope"></i> <a href="mailto:juanfcreyes@hotmail.com?Subject=PruebasGUI" target="_top">juanfcreyes@hotmail.com</a></li>
     <li>Stalin Guamán - <i class="fa fa-envelope"></i> <a href="mailto:stan.deuxie@live.com?Subject=PruebasGUI" target="_top">stan.deuxie@live.com</a></li>
     <li>Oscar Loor - <i class="fa fa-envelope"></i> <a href="mailto:dwquito@hotmail.com?Subject=PruebasGUI" target="_top">dwquito@hotmail.com</a></li>
     <li>Angel Molina - <i class="fa fa-envelope"></i> <a href="mailto:molinao.angel@gmail.com?Subject=PruebasGUI" target="_top">molinao.angel@gmail.com</a></li>
