--- a/index.html
+++ b/index.html
@@ -204,7 +204,20 @@
    <!--End mc_embed_signup-->
   </div>
  </section>
-
+<section>
+ <h2>Prototipo de las Interfaces</h2>
+    <ul style="
+    color: red;">
+     <li>Interfaz para preguntas de opcion multiple</li><br>
+    <img class="animated wobble wow" src="img/opcionMultiple.PNG"><br>
+     <li >Interfaz para preguntas de Verdadero o falso</li><br>
+     <img class="animated wobble wow" src="img/preguntaVerdaderoFalso.PNG"><br>
+    <li>Interfaz para preguntas de completar</li><br>
+       <img class="animated wobble wow" src="img/completar.png"><br>
+    <li>Interfaz para preguntas de finalizar Preguntas</li><br>
+       <img class="animated wobble wow" src="img/finalizarPrueba.png"><br>
+     </ul>
+</section>
  <footer class="site-footer">
   <span class="site-footer-credits">Página generada con <a href="https://pages.github.com">GitHub Pages</a> usando <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a> por <a href="https://twitter.com/jasonlong">Jason Long</a>.</span>
  </footer>
