Ancla para el botón prototipos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <img src="img/logoHorizontal.png" style="width: 100%;">
   <h2 class="project-tagline">Aplicaciones en Ambientes Libres</h2>
   <a target="_blank" href="https://github.com/AppLibresPruebaGUI/App_Libres_Prueba_GUI" class="btn">Revísalo en GitHub <i class="fa fa-github"></i></a>
-  <a target="_blank" href="#" class="btn">Prototipos de la interfaz de navegación <i class="fa fa-rocket"></i></a>
+  <a target="_blank" href="#prototipos" class="btn">Prototipos de la interfaz de navegación <i class="fa fa-rocket"></i></a>
  </section>
 
  <section class="main-content">
@@ -220,7 +220,7 @@
  </section>
  <section>
      <div>
- <h2>Prototipo de las Interfaces</h2>
+ <h2 name="prototipos">Prototipo de las Interfaces</h2>
     <ul style="
     color: red;">
      <li>Interfaz para preguntas de opcion multiple</li><br>
