--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <img src="img/logoHorizontal.png" style="width: 100%;">
   <h2 class="project-tagline">Aplicaciones en Ambientes Libres</h2>
   <a target="_blank" href="https://github.com/AppLibresPruebaGUI/App_Libres_Prueba_GUI" class="btn">Revísalo en GitHub <i class="fa fa-github"></i></a>
-  <a target="_blank" href="#prototipos" class="btn">Prototipos de la interfaz de navegación <i class="fa fa-rocket"></i></a>
+  <a href="#prototipos" class="btn">Prototipos de la interfaz de navegación <i class="fa fa-rocket"></i></a>
  </section>
 
  <section class="main-content">
