--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
   </div>
  </section>
  <section>
-     <div>
- <h2 name="prototipos">Prototipo de las Interfaces</h2>
+     <div id="prototipos">
+ <h2>Prototipo de las Interfaces</h2>
     <ul style="
     color: red;">
      <li>Interfaz para preguntas de opcion multiple</li><br>
