--- a/index.html
+++ b/index.html
@@ -219,12 +219,13 @@
   </div>
  </section>
  <section>
-     <div id="prototipos">
+     <div>
  <h2>Prototipo de las Interfaces</h2>
     <ul style="
     color: red;">
      <li>Interfaz para preguntas de opcion multiple</li><br>
     <img class=" wow swing"  src="img/opcionMultiple.PNG"><br>
+    <div id="prototipos"></div>
      <li >Interfaz para preguntas de Verdadero o falso</li><br>
      <img class="wow swing" src="img/preguntaVerdaderoFalso.PNG"><br>
     <li>Interfaz para preguntas de completar</li><br>
