--- a/Pruebas_GUI/assets/index.html
+++ b/Pruebas_GUI/assets/index.html
@@ -4,6 +4,8 @@
 <head>
 
     <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 </head>
 
 <body ng-app="Pruebas">
@@ -23,7 +25,7 @@
 
     </nav>
 
-    <div ui-view>
+    <div ui-view class="container-fluid">
 
 
     </div>
@@ -35,7 +37,8 @@
     <script src="app.js"></script>
     <script src="libs/jquery/jquery-2.1.4.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-
+     <!--Controladores-->
+<script src="controladores/RetroalimentacionController.js"></script>
 
 </body>
 
