--- a/Pruebas_GUI/assets/index.html
+++ b/Pruebas_GUI/assets/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 </head>
 
 <body ng-app="Pruebas">
