--- a/Pruebas_GUI/assets/vistas/login.html
+++ b/Pruebas_GUI/assets/vistas/login.html
@@ -1,13 +1,15 @@
 <div class="container" align="center">
     <h1>Bienvenido</h1>
-    <form class="form" action="#/eleccion">
+    <form ng-submit="validarUsuario()">
         <div class="form-group">
-            <input type="text" placeholder="Cedula">
+            <input ng-model="correo" type="email" placeholder="Correo">
         </div>
         <div class="form-group">
-            <input type="password" placeholder="Password">
+            <input ng-model="password" type="password" placeholder="Password">
         </div>
         <button class="btn btn-default" type="submit" id="login-button">Ingresar</button>
         </br>
     </form>
+   
+
 </div>
