--- a/Pruebas_GUI/assets/index.html
+++ b/Pruebas_GUI/assets/index.html
@@ -32,6 +32,9 @@
 
 
     <script src="libs/angular/angular.js"></script>
+    <script src="https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <link rel="stylesheet" href="https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
+
     <script src="libs/uirouter/angular-ui-router.js"></script>
     <script src="libs/uiresource/angular-resource.js"></script>
     <script src="app.js"></script>
