--- a/Pruebas_GUI/assets/vistas/eleccion.html
+++ b/Pruebas_GUI/assets/vistas/eleccion.html
@@ -6,7 +6,7 @@
         <div ng-repeat="prueba in pruebas">
             <div class="col-md-12">
                 <h2><i ></i>Lista de Pruebas</h2>
-                <a href="#/prueba">{{prueba.nombre}}</a>
+                <a href="#/prueba/{{prueba.id}}">{{prueba.nombre}}</a>
                 <br/>
                 <br/>
             </div>
