Guia para el registro de usuario

--- a/Pruebas_GUI/assets/index.html
+++ b/Pruebas_GUI/assets/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 </head>
 
@@ -44,6 +44,7 @@
     <script src="controladores/EleccionController.js"></script>
     <script src="controladores/PruebaController.js"></script>
     <script src="controladores/LoginController.js"></script>
+    <script src="controladores/RegistroController.js"></script>
 
 
 </body>
