--- a/Pruebas_GUI/assets/vistas/registro.html
+++ b/Pruebas_GUI/assets/vistas/registro.html
@@ -10,29 +10,25 @@
             <h2>Registrar Estudiantes</h2>
             <div class="form-group">
                 <label for="nombreUsuario">Nombre:</label>
-                <input ng-model="nombre" type="text" class="form-control" id="nombreUsuario" placeholder="Ingrese su Nombre" name="name" required>
+                <input ng-model="usuario.nombre" type="text" class="form-control" id="nombreUsuario" placeholder="Ingrese su Nombre" name="name" required>
                 <span ng-show="!exampleForm.$pristine && exampleForm.name.$error.required">Nombre es requerido.</span>
             </div>
 
             <div class="form-group">
                 <label for="apellidoUsuario">Apellido:</label>
-                <input ng-model="apellido" type="text" class="form-control" id="apellidoUsuario" placeholder="Ingrese su Apellido" name="lastname" required>
+                <input ng-model="usuario.apellido" type="text" class="form-control" id="apellidoUsuario" placeholder="Ingrese su Apellido" name="lastname" required>
                 <span ng-show="!exampleForm.$pristine && exampleForm.lastname.$error.required">Apellido es requerido.</span>
             </div>
             <div class="form-group">
                 <label for="correoUsuario">Correo:</label>
-                <input ng-model="correo" type="email" class="form-control" id="correoUsuario" placeholder="Ingrese su correo" name="email" required>
+                <input ng-model="usuario.correo" type="email" class="form-control" id="correoUsuario" placeholder="Ingrese su correo" name="email" required>
                 <span ng-show="!exampleForm.$pristine && exampleForm.email.$error.required">Email es requerido</span>
                 <span ng-show="!exampleForm.$pristine && exampleForm.email.$error.email">Por favor ingrese un email valido</span>
             </div>
             <div class="form-group">
                 <label for="passwordUsuario">Password:</label>
-                <input ng-model="password" type="password" class="form-control" id="passwordUsuario" placeholder="Ingrese su Password" name="password" required>
+                <input ng-model="usuario.password" type="password" class="form-control" id="passwordUsuario" placeholder="Ingrese su Password" name="password" required>
                 <span ng-show="!exampleForm.$pristine && exampleForm.password.$error.required">Password es requerido</span>
-            </div>
-            <div class="form-group">
-                <label for="fechaNacUsuario">Fecha de Nacimiento:</label>
-                <input ng-model="fecha" type="date" class="form-control" id="fechaNacUsuario" placeholder="Fecha de Nacimiento" name="nacimiento" required>
             </div>
             <button type="submit" class="btn btn-primary">Registrar Estudiante</button>
         </form>
