Registro prueba tomada

--- a/Pruebas_GUI/assets/vistas/registro.html
+++ b/Pruebas_GUI/assets/vistas/registro.html
@@ -4,7 +4,7 @@
 
         <div class="col-sm-6" style="background-color:aliceblue;">
             <!--       EMPIEZA EL CONTENEDOR DE LA MITAD-->
-            <form ng-submit="agregarUsuario()" action="#/" name="exampleForm">
+            <form ng-submit="agregarUsuario()"  name="exampleForm">
 
 
                 <h2>Registrar Estudiantes</h2>
