--- a/Pruebas_GUI/assets/vistas/prueba.html
+++ b/Pruebas_GUI/assets/vistas/prueba.html
@@ -2,20 +2,25 @@
     <div class="row" ng-model="prueba">
         <div class="alert alert-info"><i class="fa fa-file"></i> Diseño de la Prueba</div>
         <div class="container">
+            <form ng-submit="registrarPrueba()">
             <label for="preguntaVoF"><i class="fa fa-check-circle"></i> Pregunta de Opción Multiple:</label>
             <br>
             <div ng-repeat="pregunta in prueba.preguntasColeccion">
                 <label>{{$index+1}} &nbsp; {{pregunta.enunciado}} </label>
                 <div class="form-vertical">
-                <input type="radio" ng-model="color.name" value="{{pregunta.opcion1}}">{{pregunta.opcion1}}
+                <input type="radio" ng-model="respuestas[$index]" value="{{pregunta.opcion1}}">{{pregunta.opcion1}}
                        <br/>
-                 <input type="radio" ng-model="color.name" value="{{pregunta.opcion3}}">{{pregunta.opcion2}}
+                 <input type="radio" ng-model="respuestas[$index]" value="{{pregunta.opcion3}}">{{pregunta.opcion2}}
                        <br/>
-                 <input type="radio" ng-model=" color.name" value="{{pregunta.opcion2}}">{{pregunta.opcion3}}
+                 <input type="radio" ng-model="respuestas[$index]" value="{{pregunta.opcion2}}">{{pregunta.opcion3}}
                 </div>
+                {{respuestas[$index]}}
+                
             </div>
             <br/>
-            <a class="btn btn-success pull-center" href="#/retroalimentacion">Finalizar</a>
+            
+            <button type="submit" class="btn btn-success" >Finalizar Prueba</button>
+            </form>
         </div>
     </div>
 
