--- a/Pruebas_GUI/assets/index.html
+++ b/Pruebas_GUI/assets/index.html
@@ -45,7 +45,7 @@
     <script src="controladores/PruebaController.js"></script>
     <script src="controladores/LoginController.js"></script>
     <script src="controladores/RegistroController.js"></script>
-
+     <script src="controladores/RetroalimentacionController.js"></script>
 
 </body>
 
