Uso de parametros globales en la aplicacion mediante el uso de factory

--- a/Pruebas_GUI/assets/index.html
+++ b/Pruebas_GUI/assets/index.html
@@ -41,6 +41,9 @@
     <script src="libs/jquery/jquery-2.1.4.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
 
+     <!--Factory-->
+     <script src="factory/parametrosRetroalimentacion.js"></script>
+     
     <script src="controladores/EleccionController.js"></script>
     <script src="controladores/PruebaController.js"></script>
     <script src="controladores/LoginController.js"></script>
