--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
     }(jQuery));
     var $mcj = jQuery.noConflict(true);
    </script>
+   
+   
+   <h2 style="text-align: center;">Encuentranos también en IRC a continuación</h2>
+<p style="text-align: center;"></br>Escribe un nick y conectate</p>
+
+     <iframe style="text-align: center;" src="http://www.chatzona.org/webmasters/formulario.php?canal=Libres_GUI" scrolling="no" width="345" height="125" frameborder="0"></iframe>
    <!--End mc_embed_signup-->
   </div>
  </section>
