Terminado por ahora

--- a/Pruebas_GUI/assets/vistas/retroalimentacion.html
+++ b/Pruebas_GUI/assets/vistas/retroalimentacion.html
@@ -11,7 +11,7 @@
 
   <div class="col-md-12">
    <h2><i class="fa fa-file-text"></i> Datos de realización de la Prueba</h2>
-   <h3 style="color:red;"><i class="fa fa-check-square"></i> Calificación final: {{datosPruebaTomada.calificacion}}/20</h3>
+   <h3 style="color:red;"><i class="fa fa-check-square"></i> Calificación final: {{datosPruebaTomada.calificacion}}</h3>
    <p><strong>Hora de Inicio del Intento:</strong> {{datosPruebaTomada.horaEmpiezaIntento}}</p>
    <p><strong>Hora de Finalización del Intento:</strong> {{datosPruebaTomada.horaTerminaIntento}}</p>
    <p><strong>Tiempo transcurrido:</strong> {{datosPruebaTomada.tiempoTomado}} minutos</p>
