--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
 </section>
  <footer class="site-footer">
   <span class="site-footer-credits">Página generada con <a href="https://pages.github.com">GitHub Pages</a> usando <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a> por <a href="https://twitter.com/jasonlong">Jason Long</a>.</span>
+ 	<a href="https://opensource.org/licenses/MIT">MIT</a>
  </footer>
+ 
 </body>
 
 </html>
