--- a/index.html
+++ b/index.html
@@ -242,8 +242,9 @@
      </div>
 </section>
  <footer class="site-footer">
+ 	<a href="https://opensource.org/licenses/MIT">Licencia utilizada: MIT</a>
   <span class="site-footer-credits">Página generada con <a href="https://pages.github.com">GitHub Pages</a> usando <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a> por <a href="https://twitter.com/jasonlong">Jason Long</a>.</span>
- 	<a href="https://opensource.org/licenses/MIT">MIT</a>
+ 	
  </footer>
  
 </body>
